feat: Enhance seeders with detailed documentation and improve data consistency checks